--- a/queue/Cargo.toml
+++ b/queue/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sp-queue"
+name = "sp_queue"
 version = "0.1.0"
 authors = ["Peter Travers <traverspw@gmail.com>"]
 edition = "2018"
