--- a/queue/Cargo.toml
+++ b/queue/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2018"
 
 [dependencies]
 lazy_static = "1.4.0"
+bincode = "1.2.1"
+serde = { version = "1.0.107", features = ["derive"] }
 sp_storage = { path = "../storage" }
+sp_error = { path = "../error" }
