--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,10 @@
-queue/target/
-server/target/
-Dockerfile
+## Rust ##
+**/target/*
+**/*.rs.bk
+target/
+**/vendor/*
+
+## Python ##
+*.pyc
+venv/
+.mypy_cache/
