--- a/integration_tests/docker-compose.yml
+++ b/integration_tests/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   test:
     build:
       context: ..
-      dockerfile: tests/Dockerfile
+      dockerfile: integration_tests/Dockerfile
     image: spq-tests:latest
     entrypoint: "./entrypoint.sh"
     command: "./run_tests.sh"
