--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Pete Travers <traverspw@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+log = "0.4"
 sp_error = { path = "../error" }
 serde = { version = "1.0.107", features = ["derive"] }
 uuid = { version = "0.8", default-features = false, features = ["v4"] }
