--- a/queue/Cargo.toml
+++ b/queue/Cargo.toml
@@ -8,5 +8,10 @@ edition = "2018"
 bincode = "1.2.1"
 lazy_static = "1.4.0"
 serde = { version = "1.0.107", features = ["derive"] }
-sp_storage = { path = "../storage" }
-sp_error = { path = "../error" }
+log = "0.4"
+uuid = { version = "0.8", default-features = false, features = ["v4"] }
+
+[dependencies.rocksdb]
+version = "0.14.0"
+default-features = false
+features = ["lz4"]
