Add checking formatting in ci only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Check format
+      run: make fmt-ci
     - name: Build
       run: make build
     - name: Run tests
